# python

./: .gitignore  .pre-commit-config.yaml  Makefile  MongoDB.txt  book class.py  command.txt  curl.txt  git and python library install.txt  jfrog.md  main_program.py  monogod.cfg  pyproject.toml  result.txt  run.sh  test.py  test1.py  uv.md
Advanced Module/: counter.py  date.py  debugger.py  lambda in json.py  math.py  os and shubtul.py
Capstone2/: card_utils.py  setup.py  setup2.py
Decorator/: cache.py  class_and_static methods.py  dataclass.py  function.py  property.py  property2.py
Email/: Email_practice.py  receive_email.py
Files and CSV/: Solution Links.md  csv_practice.py  working_with_pdf.py
Functions/: function - sykline.py  global variable.py  homework.py  lambda expresion map and filter.py
Graphql/: .md  __init__.py  main.py  requirements.txt
Introduction to GUI/: 06-Custom Widget.ipynb  08-Advanced Widget Styling with Layout.ipynb  GUI.py
Module/: importlip.py  one.py  two.py
MongoDB---The-Complete-Developer-s-Guide-master/: README.md  commands.txt
Path/: path.py
Scripts/: Activate.ps1  activate  activate.bat
asyncio/: asyncio_practice.py  decorator.py  event.py  future.py  lock.py  threading.py  threading_pool.py
data/: artist_streams_2012-06.tsv  streams_2012_06_01_faked.tsv  streams_2012_06_02_faked.tsv  streams_2012_06_03_faked.tsv  streams_2012_06_04_faked.tsv  streams_2012_06_05_faked.tsv  streams_2012_06_06_faked.tsv  streams_2012_06_07_faked.tsv  streams_2012_06_08_faked.tsv  streams_2012_06_09_faked.tsv  (+21 more)
luigi_test/: luigi.md  (+2 more)
(+108 files in other folders)
