[tool.poetry]
name = "pipeline-test"
version = "0.1.0"
description = ""
authors = ["Raymond Huang <shanhua18@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "luigi_test"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
